2005-08-17  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/paint-funcs.c (smooth_region): fixed
	initialization of row array.

	* app/base/siox.c: minor cleanups.

2005-08-17  Tor Lillqvist  <tml@novell.com>

	* plug-ins/winsnap/Makefile.am (LDADD): Use $(WINDRES) to handle
	cross-compilation.

	* plug-ins/winsnap/winsnap.rc: Refer to the .ico files in
	lowercase, in case cross-compiling.

2005-08-17  Sven Neumann  <sven@gimp.org>

	* app/base/siox.c: applied patch by Kristian Jantz. Reimplements
	find_max_blob() so that it needs less memory. Slows things down a
	bit, but that can be improved later.

2005-08-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/grid.c: update the progress less frequently.

2005-08-17  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimppaletteview.c (gimp_palette_view_focus): when
	focussing the widget, select the palette's first entry if none is
	selected. Enables cursor navigation after tabbing in.

2005-08-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/deinterlace.c: fixed boundary conditions.

2005-08-16  Akkana Peck  <akkana@cvs.gnome.org>

	* plug-ins/script-fu/scripts/grid-system.scm: Rename "Grid" to
	"Divisions" to avoid confusion with the existing grid plug-in;
	move into Render->Pattern along with the other Grid plug-in.

2005-08-17  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimppaletteview.c (gimp_palette_view_focus): return
	FALSE on TAB_FORWARD and TAB_BACKWARD. Enables tabbing out of the
	widget.

2005-08-17  Michael Natterer  <mitch@gimp.org>

	* app/actions/layers-actions.c
	* app/actions/plug-in-actions.c
	* app/actions/image-actions.c: moved all color menu actions to
	image-actions.c because that's the place where we collect menu
	actions of menus that don't have its own foo-actions.c file.
	Renamed them all to "colors-foo-menu".

	* menus/image-menu.xml.in: changed accordingly.

2005-08-16  Akkana Peck  <akkana@cvs.gnome.org>

	* menus/image-menu.xml.in
	* app/actions/image-actions.c